# ar-cityscape-builder

./: ARTagNode.cpp  ARTagNode.h  CMakeLists.txt  CalibrationParameters.cpp  CalibrationParameters.h  Camera_Parameter_File.yml  GLSL_ShaderLoader.cpp  GLSL_ShaderLoader.h  GeometryTypes.cpp  GeometryTypes.h  Marker.cpp  Marker.h  MarkerDetector.cpp  MarkerDetector.h  MarkerNode.cpp  MarkerNode.h  README.md  SkyscraperAssetLoader.cpp  SkyscraperAssetLoader.h  VideoRenderer.cpp  VideoRenderer.h  VideoTexCallback.cpp  VideoTexCallback.h  main.cpp  main.h
models/: Godzilla.mtl  Godzilla_D.tga  apartman_2.mtl  teapot.3ds
shaders/: contour.fs  videobg.fs  videobg.vs
